--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,19 @@ color:inherant;
 
 #logo {float: left;
 font-size:280%;}
+
+#hero-image {
+    height:600px;
+    width: 100%;
+    background: url('../css/images/Hero-project-image.jpeg');
+}
+
+#cover-text h2 {color:#fff}
+
+#cover-text{
+    font-size:130%;
+    font-family:'Roboto', sans-serif;
+    letter-spacing: 4px;
+    width: 300px;
+    height: 200px;
+}
