--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ h1 h2 {
 #menu { 
     font-size:110%;
     letter-spacing: 4px;
+    font: #3a3a3a;
 }
 
 #menu li { 
@@ -53,12 +54,13 @@ h1 h2 {
 #logo {
     float: left;
     font-size:280%;
+    margin-left:30px;
 }
 
 #hero-image {
     height:600px;
     width: 100%;
-    background: url('../css/images/Hero-project-image.jpeg');
+    background: url('../css/images/Hero-project-image.jpeg') no-repeat center center;
     overflow: hidden;
     position:relative;
 }
@@ -79,7 +81,30 @@ h1 h2 {
     padding-left:10px;
     background-color: rgba(173, 216, 230, .7);
     
-    bottom: 30px;
+    bottom: 115px;
     right:150px;
     position: absolute;
+}
+
+#about-us  { 
+    text-align: center;
+    font-family:'Scheherazade New', serif;
+    color:lightskyblue;
+    font-size: 300%;
+}
+
+#about-p {
+    text-align: center;
+    font-size: 150%; 
+    font-family: 'Roboto', sans-serif;
+    
+    color: white;
+    background-color: rgba(173, 216, 230);
+    padding: 50px;
+}
+
+#techniques { 
+    text-align: center;
+    font-size: 200%; 
+    font-family: 'Scheherazade New', serif;
 }
