--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,46 +5,67 @@
 
 
 * { 
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     border: none; }
 
 body { 
-    font-family: 'Scheherazade New', serif;
-    font: color #3a3a3a;
-    font-weight:300;
+    font-family: 'Scheherazade New';
+    color: #3a3a3a;
+    font-weight: 300;
 }
 
 h1 h2 { 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     text-transform: uppercase;
-    letter-spacing:4px;
-    color: 252526px;
+    letter-spacing: 4px;
+    color: inherit;
+}
+
+h4 { 
+    color:white;
+    background-color: rgba(173, 216, 230);
+    font-family: 'Roboto';
+    padding: 40px;
+}
+
+p {
+    color:#3a3a3a;
+    font-size: 80%;
+    padding-left: 75px;
+    padding-right: 75px;
 }
 
 #menu { 
-    font-size:110%;
+    font-size: 110%;
     letter-spacing: 4px;
-    font: #3a3a3a;
+    font: #0198ca
+}
+
+.menu .icon{
+    display: none;
 }
 
 #menu li { 
     float: right;
     list-style-type: none;
     margin-right: 30px;
+    color: #0198ca;
+
 }
 
 #menu a { 
-    text-decoration:none;
-    color:inherant;
+    text-decoration: none;
+    color: #0198ca;
 }
 
 #menu, #logo { 
-    line-height:75px;
+    line-height: 75px;
+    color: #0198ca;
 }
 
 #menu a:hover { 
-    border-bottom:1px solid #3a3a3a
+    border-bottom: 1px solid #0198ca
 }
 
 .active {
@@ -53,16 +74,16 @@ h1 h2 {
 
 #logo {
     float: left;
-    font-size:280%;
-    margin-left:30px;
+    font-size: 280%;
+    margin-left: 30px;
 }
 
 #hero-image {
-    height:600px;
+    height: 600px;
     width: 100%;
     background: url('../css/images/Hero-project-image.jpeg') no-repeat center center;
     overflow: hidden;
-    position:relative;
+    position: relative;
 }
 
 #cover-text  {
@@ -70,34 +91,36 @@ h1 h2 {
 }
 
 #cover-text{
-    font-size:130%;
-    font-family:'Roboto', sans-serif;
-    text-transform:uppercase;
+    font-size: 130%;
+    font-family: 'Roboto';
+    text-transform: uppercase;
     letter-spacing: 4px;
     width: 300px;
-    height: 200px;
+    height: 240px;
 
-    padding-top:40px;
-    padding-left:10px;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-bottom: 20px;
+    padding-right: 10px;
     background-color: rgba(173, 216, 230, .7);
-    
-    bottom: 115px;
-    right:150px;
+    right: 150px;
     position: absolute;
+    bottom: 115px;
 }
 
 #about-us  { 
     text-align: center;
-    font-family:'Scheherazade New', serif;
-    color:lightskyblue;
-    font-size: 300%;
+    font-family: 'Roboto';
+    color: white;
+    background-color: rgba(173, 216, 230);
+    font-size: 250%;
+    padding-top: 40px;
 }
 
 #about-p {
     text-align: center;
     font-size: 150%; 
-    font-family: 'Roboto', sans-serif;
-    
+    font-family: 'Roboto'; 
     color: white;
     background-color: rgba(173, 216, 230);
     padding: 50px;
@@ -106,47 +129,80 @@ h1 h2 {
 #techniques { 
     color:#3a3a3a;
     text-align: center;
-    font-size: 175%; 
-    font-family: 'Scheherazade New', serif;
-    padding-top:35px;
+    font-size: 150%; 
+    font-family: 'Roboto', serif;
+    padding-top: 35px;
 }
 
 #techniques-list {
     color:#3a3a3a;
-    font-size: 100%;
-    font-family: 'Roboto', sans-serif;
-    padding:50px;
+    font-size: 80%;
+    font-family: 'Roboto';
+    padding: 50px;
 }
 
-p {
-    color:#3a3a3a;
-    font-size:80%;
-    padding-left:75px;
-    padding-right:75px;
+.guide {
+    background: url("assets/css/images/6-step-breath-meditation.png") no-repeat center center;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
-
-h4 { color:white;
-    background-color: rgba(173, 216, 230);
-    font-family:'Roboto', sans-serif;
-    padding: 40px;
-}
-
-.guide {padding: 40px;}
 
 #sign { 
     text-align: center;
     background-color: rgba(173, 216, 230);
-    font-size: 150%;
-    padding:50px;
+    font-size: 120%;
+    padding: 50px;
+    padding-bottom: 40px;
 }
 
 #button {
-    text-transform:uppercase;
-    border-radius: 40px;
-    border: 0;
+    text-transform: uppercase;
+    border-radius: 50px;
+    border: 10px;
     padding: 1rem 1.5rem;
+    background-color: #fff;
 }
 
 #button:hover { 
-    background:rgba(173, 216, 230)
+    background:rgb(82, 191, 228)
+}
+
+footer {
+    height: 100px;
+}
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks > li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: rgba(173, 216, 230);
+    border-top: 10px;
+}
+
+/* Media Queries */
+
+/* For medium screen sizes from 950px wide and down */
+@media screen and (max-width: 950px) {
+    
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+    .guide { 
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: bottom;
+    }
 }
