--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Scheherazade+New&display=swap');
 
 
-
 * { 
     margin: 0;
     padding: 0;
-    border: none; }
+    border: none; 
+}
 
 body { 
     font-family: 'Scheherazade New';
@@ -36,14 +36,16 @@ p {
     padding-right: 75px;
 }
 
+nav {
+    top: 0;
+    background-color: white;
+    width: 100%;
+}
+
 #menu { 
     font-size: 110%;
     letter-spacing: 4px;
-    font: #0198ca
-}
-
-.menu .icon{
-    display: none;
+    font: #0198ca;
 }
 
 #menu li { 
@@ -51,7 +53,6 @@ p {
     list-style-type: none;
     margin-right: 30px;
     color: #0198ca;
-
 }
 
 #menu a { 
@@ -68,10 +69,6 @@ p {
     border-bottom: 1px solid #0198ca
 }
 
-.active {
-    border-bottom: 1px solid #3a3a3a
-}
-
 #logo {
     float: left;
     font-size: 280%;
@@ -81,23 +78,22 @@ p {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url('../css/images/Hero-project-image.jpeg') no-repeat center center;
+    background: url('../images/Hero-project-image.jpeg') no-repeat center center;
     overflow: hidden;
     position: relative;
 }
 
-#cover-text  {
+#cover-text {
     color:#fff
 }
 
-#cover-text{
+#cover-text {
     font-size: 130%;
     font-family: 'Roboto';
     text-transform: uppercase;
     letter-spacing: 4px;
     width: 300px;
     height: 240px;
-
     padding-top: 30px;
     padding-left: 10px;
     padding-bottom: 20px;
@@ -106,6 +102,7 @@ p {
     right: 150px;
     position: absolute;
     bottom: 115px;
+    top: 250px;
 }
 
 #about-us  { 
@@ -138,11 +135,17 @@ p {
     color:#3a3a3a;
     font-size: 80%;
     font-family: 'Roboto';
-    padding: 50px;
+    padding-top: 150px;
+    padding-left: 39%;
+    padding-right: 30%;
+    text-align: center;
+    position: relative; 
+    list-style-position: inside;
+    display: inline;
 }
 
 .guide {
-    background: url("assets/css/images/6-step-breath-meditation.png") no-repeat center center;
+    background: url("assets/images/6-step-breath-meditation.png") no-repeat center center;
     padding-top: 40px;
     padding-bottom: 40px;
 }
@@ -199,10 +202,20 @@ footer {
         margin-bottom: 20px;
         line-height: 25px;
     }
+
     .guide { 
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: bottom;
+    }
+
+    #cover-text {
+        left: 0;
+    }
+
+    #techniques-list {
+        padding-left: 10%;
+        padding-right: 0;
     }
 }
