--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@
     border: none; 
 }
 
+/* Text */
+
 body { 
     font-family: 'Scheherazade New';
     color: #3a3a3a;
@@ -31,10 +33,12 @@ h4 {
 
 p {
     color:#3a3a3a;
-    font-size: 80%;
-    padding-left: 75px;
-    padding-right: 75px;
+    font-size: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
+
+/* Navigation */
 
 nav {
     top: 0;
@@ -45,7 +49,7 @@ nav {
 #menu { 
     font-size: 110%;
     letter-spacing: 4px;
-    font: #0198ca;
+    color: #0198ca;
 }
 
 #menu li { 
@@ -74,6 +78,8 @@ nav {
     font-size: 280%;
     margin-left: 30px;
 }
+
+/* Hero Image and Cover Text */
 
 #hero-image {
     height: 600px;
@@ -105,6 +111,8 @@ nav {
     top: 250px;
 }
 
+/* About Us */
+
 #about-us  { 
     text-align: center;
     font-family: 'Roboto';
@@ -123,6 +131,8 @@ nav {
     padding: 50px;
 }
 
+/* Techniques */
+
 #techniques { 
     color:#3a3a3a;
     text-align: center;
@@ -133,7 +143,7 @@ nav {
 
 #techniques-list {
     color:#3a3a3a;
-    font-size: 80%;
+    font-size: 100%;
     font-family: 'Roboto';
     padding-top: 150px;
     padding-left: 39%;
